# interpol

./: .coverage  README.md  main.py  noxfile.py  perfomance.py  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  examples.rst  index.rst  modules.rst  perfomance.rst
interpol/: cli.py  lagrange.py  linear.py  utils.py
tests/: test_cli.py  test_integration.py  test_lagrange.py  test_linear.py
