[tool.poetry]
name = "interpol"
version = "0.1.0"
description = "project intepolations"
authors = ["Lev"]
readme = "README.md"
packages = [{include = "interpol"}]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.5.0,<3.10.0"
numpy = "==1.21.0"
click = ">=8.1.8,<9.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
interpol-cli = "interpol.cli:main"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "D203",  # игнорируем конфликт one-blank-line-before-class
    "D212",  # игнорируем конфликт multi-line-summary-first-line
    "RET504",  # необязательное предупреждение о return
    "EM101",  # разрешаем строковые литералы в исключениях
    "TRY200",  # необязательное raise from
    "RUF002",  # разрешаем кириллические символы
    "ANN001", # разрешаем не объявлять типы
    "ANN201", # same as previous
    "D100", # я разрешаю докстринг
    "D103",
    "D104",
    "TRY003", # я разрешаю длинные вещи
    "B904" # я разрешаю except
]
fixable = ["ALL"]
unfixable = []

# Форматирование (аналог black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Правила для конкретных файлов
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Неиспользуемые импорты в __init__.py разрешены
"tests/*.py" = [
  "S101",  # assert в тестах
  "INP001" # Неявные пространства имен в тестах
]

#Tests
[tool.pytest.ini_options]
addopts = "--cov=interpol --cov-report=term-missing"
testpaths = ["tests"]